Fix generating rounds